make build tools configurable

--- a/cmlibrary/build.gradle
+++ b/cmlibrary/build.gradle
@@ -5,8 +5,8 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.Hitomi'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         minSdkVersion 14
@@ -25,5 +25,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
 }
