--- a/build.gradle
+++ b/build.gradle
@@ -22,3 +22,10 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    compileSdkVersion = 26
+    buildToolsVersion = "26.0.2"
+    targetSdkVersion = 26
+    supportLibraryVersion = "26+"
+}
