--- a/cmlibrary/build.gradle
+++ b/cmlibrary/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 // JitPack Maven
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 // Group
 group='com.github.Hitomi'
 
