fix lib variable names

--- a/cmlibrary/build.gradle
+++ b/cmlibrary/build.gradle
@@ -25,5 +25,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile "com.android.support:appcompat-v7:$supportLibraryVersion"
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
 }
