--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,5 @@ ext {
     compileSdkVersion = 26
     buildToolsVersion = "26.0.2"
     targetSdkVersion = 26
-    supportLibraryVersion = "26+"
+    supportLibVersion = "26+"
 }
